<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.edu.pw.mini.shoppinglist.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/details_menu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/details_toolbar_title"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_menu_toolbar"
        tools:context="pl.edu.pw.mini.shoppinglist.DisplayShoppingItemActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="left"
                    android:text="@string/item_name" />

                <EditText
                    android:id="@+id/item_name_edittext"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/item_name_value">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="left"
                    android:text="@string/items_number" />

                <EditText
                    android:id="@+id/items_number_edittext"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="@string/items_number_value"
                    android:inputType="numberSigned" />
            </LinearLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="saveItem"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>